@@ -282,7 +282,8 @@ sub showDiagnostics(@)
 	{	my $name    = $self->cleanup($manual, $diag->name);
 		my $type    = $diag->type;
 		$output->print("\n=item $type: $name\n\n");
-		$output->print($self->cleanup($manual, $diag->description || 'Z<>'));
+		$output->print($self->cleanup($manual, $diag->description));
+		$output->print("Cast by ", $diag->subroutine->name, "()\n");
 		$output->print("\n");
 	}
 	$self;
