@@ -12,6 +12,9 @@ version 3.03:
 	Improvements:
 	- warning in addSubroutine()
 	- display of ties and overload in both POD and HTML
+	- add OODoc::Examples
+	- pod diagnostics show which function produces them.
+	- subsubsection is h5 in html
 
 version 3.02: Fri 15 Aug 14:52:20 CEST 2025
 
